[tool.poetry]
name = "2025-p1-iamabin"
version = "0.1.0"
description = ""
authors = ["iamabin <wc2497535068@gmail.com>"]
readme = "README.md"
packages = [{ include = "todo" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = ">=3.1.0,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"